--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.1.0",
+    "gray-matter": "^4.0.2",
+    "marked": "^1.2.7",
     "next": "10.0.4",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
