--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "10.0.4",
     "postcss": "^8.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2"
   }
 }
