--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "marked": "^1.2.7",
     "next": "10.0.4",
     "postcss": "^8.2.1",
+    "querystring": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1",
+    "swr": "^0.4.0",
     "tailwindcss": "^2.0.2"
   }
 }
