--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "querystring": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-map-gl": "^6.1.1",
     "styled-components": "^5.2.1",
     "swr": "^0.4.0",
     "tailwindcss": "^2.0.2"
