--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gray-matter": "^4.0.2",
     "mapbox-gl": "^2.0.1",
     "marked": "^1.2.7",
-    "next": "10.0.4",
+    "next": "^10.0.4",
     "postcss": "^8.2.1",
     "querystring": "^0.2.0",
     "react": "17.0.1",
