--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-map-gl": "^6.1.1",
+    "sharp": "^0.26.2",
     "styled-components": "^5.2.1",
     "swr": "^0.4.0",
     "tailwindcss": "^2.0.2"
