--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "marked": "^1.2.7",
     "next": "^10.0.4",
     "postcss": "^8.2.1",
+    "prismjs": "^1.25.0",
+    "pygmentize-bundled": "^2.3.0",
     "querystring": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -26,5 +28,9 @@
     "styled-components": "^5.2.1",
     "swr": "^0.4.0",
     "tailwindcss": "^2.2.15"
+  },
+  "devDependencies": {
+    "markdown-it": "^12.2.0",
+    "markdown-it-prism": "^2.2.1"
   }
 }
