--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "autoprefixer": "^10.1.0",
     "gray-matter": "^4.0.2",
+    "katex": "^0.16.0",
     "marked": "^4.0.0",
     "next": "^12.0.3",
     "postcss": "^8.2.1",
