--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "autoprefixer": "^10.1.0",
+    "better-react-mathjax": "^2.0.2",
     "gray-matter": "^4.0.2",
-    "katex": "^0.16.0",
     "marked": "^4.0.0",
     "next": "^12.0.3",
     "postcss": "^8.2.1",
