--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^5.2.1",
     "swr": "^0.4.0",
     "tailwind-scrollbar-hide": "^1.1.5",
-    "tailwindcss": "^2.2.15"
+    "tailwindcss": "^2.2.15",
+    "use-animate-number": "^1.0.5"
   }
 }
